--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
     6620310135 นายณัฐวัฒน์ จันทรส |
     6620310242 นายอาณัส สาแล
   </footer>
-  <script src="spot.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
